--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Calendar</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_agenda">AgendaActivity</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
