--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_main">MSFT-Calendar</string>
 
     <string name="text_no_events">No Events</string>
+    <string name="text_all_day_event">all-day</string>
 </resources>
