--- a/times-square/src/main/res/values-eo/strings.xml
+++ b/times-square/src/main/res/values-eo/strings.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright 2012 Square, Inc. -->
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright 2012 Square, Inc. -->
 
 <resources>
-  <string name="invalid_date">Dato devas esti inter %1$s kaj %2$s.</string>
+    <string name="invalid_date">Dato devas esti inter %1$s kaj %2$s.</string>
 </resources>
