--- a/times-square/src/main/res/values-fr/strings.xml
+++ b/times-square/src/main/res/values-fr/strings.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright 2015 Square, Inc. -->
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright 2015 Square, Inc. -->
 
 <resources>
-  <string name="invalid_date">La date doit être comprise entre %1$s et %2$s.</string>
+    <string name="invalid_date">La date doit être comprise entre %1$s et %2$s.</string>
 </resources>
