--- a/times-square/src/main/res/values-v9/strings.xml
+++ b/times-square/src/main/res/values-v9/strings.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright 2012 Square, Inc. -->
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright 2012 Square, Inc. -->
 
 <resources>
-  <string name="month_name_format">LLLL yyyy</string>
+    <string name="month_name_format">LLLL yyyy</string>
 </resources>
